# flexon-db

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  CMakePresets.json  CROSS_PLATFORM.md  Makefile  Makefile.dev  Makefile.new  README.md  README.md.backup  README_MOBILE.md  demo.csv  demo_output.txt  employees.fxdb  test.csv  test.fxdb  test_cli_advanced.sh  test_cli_enhancements.sh  test_config.c  test_enhanced_db.c  test_enhanced_reader.c  test_io_performance.c  test_io_utils.c  test_json_insertion.c  test_writer_open.c
assets/: logo.txt
cli/: main.c  shell.c
core/: flexondb.c  flexondb.h
docs/: API.md  BUILDING.md  BUILD_SYSTEM.md  CONTRIBUTING.md  EXAMPLES.md
examples/: test_reader.c  test_schema.c  test_writer.c
include/: compat.h  config.h  platform.h  reader.h  schema.h  shell.h  types.h  writer.h
include/common/: colors.h  command_processor.h
include/core/: data_types.h
include/platform/: filesystem.h  terminal.h
mobile/android/jni/: flexondb_jni.c
mobile/ios/: FlexonDBBridge.h  FlexonDBBridge.m
react-native/: FlexonDBModule.js  package.json
scripts/: build_all.sh  install.ps1  install.sh
src/: error.c  formatter.c  main.c  parser.c  reader.c  schema.c  session.c  shell.c  utils.c  writer.c
src/cli/: CMakeLists.txt  main.c
src/common/: CMakeLists.txt  command_processor.c  error.c  io_utils.c  logo.c  utils.c  welcome.c
src/compat/: CMakeLists.txt  compat.c
src/core/: CMakeLists.txt  data_types.c  reader.c  schema.c  writer.c
src/platform/: CMakeLists.txt  colors.c  filesystem.c  terminal.c
src/shell/: CMakeLists.txt  formatter.c  parser.c  session.c  shell.c
tests/: CMakeLists.txt  test_utils.c  test_utils.h
tests/benchmarks/: benchmark_formats.c  benchmark_insert.c  benchmark_query.c  benchmark_read.c
tests/data/: README.md  small_dataset.json
tests/integration/: test_cli_shell_parity.c  test_cross_platform.c  test_full_workflow.c
tests/scripts/: benchmark.sh  generate_report.py
tests/unit/: test_command_processor.c  test_data_types.c  test_enhanced_schema.c  test_reader.c  test_schema.c  test_writer.c
toolchains/: android.cmake  ios.cmake
